[package]
name = "gstreamer-rs-lgpl-docs"
version = "0.16.0"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
license = "LGPL-2.0"
description = "LGPL-licensed docs for gstreamer-rs crates"
repository = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs"
homepage = "https://gstreamer.freedesktop.org"

[lib]
name = "lgpl_docs"

[dependencies]
rustdoc-stripper = "0.1.6"
