[package]
name = "gstreamer-analytics"
authors = ["Olivier Crête <olivier.crete@collabora.com>"]
description = "Rust bindings for GStreamer Analytics library"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://gstreamer.freedesktop.org/documentation/rust/stable/latest/docs/gstreamer_analytics/"
keywords = ["gstreamer", "multimedia", "audio", "video", "gnome"]
version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2"
gstreamer-analytics-sys.workspace = true
glib.workspace = true
gst.workspace = true

[dev-dependencies]
gir-format-check = "0.1"

[features]
default = []
v1_26 = ["gst/v1_26", "gstreamer-analytics-sys/v1_26"]
v1_28 = ["gst/v1_28", "gstreamer-analytics-sys/v1_28", "v1_26"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
